fixed main page length  error on mobile

--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -159,6 +159,7 @@ body{
 
 .icons{
 	margin-top:1.5em;
+	margin-bottom:3em;
 	@include bp(tablet){
 		text-align: center;
 	}
